--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,24 @@
             <version>${org.slf4j-version}</version>
             <scope>runtime</scope>
         </dependency>
-
+		
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-support</artifactId>
+			<version>2.0.6</version>
+		</dependency>
+		
+		
 
     </dependencies>
 
